--- a/ily.html
+++ b/ily.html
@@ -18,7 +18,7 @@
 
     <script>
         var typed = new Typed (" .auto-type", {
-            strings: ["your intelligence", "your beauty", "your creativity", "your funniness", "our simularities", "our differnces", "everything about you"],
+            strings: ["your intelligence", "your beauty", "your creativity", "your funniness", "our simularities", "our differnces", "everything about you", "you"],
             typeSpeed: 150,
             backSpeed: 150,
             loop: true
