--- a/recap.html
+++ b/recap.html
@@ -8,9 +8,178 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/secondary.css">
+    <link rel="stylesheet" href="styles/recap.css">
+
 </head>
 <body>
-    
+    <div class="paragraph-container">
+        <div class="tc-img">
+            <img src="/assets/tc color.svg" alt="">
+        </div>
+        <div class="paragraph">
+            <p><em>My dearest Tobsy,</em></p>
+            <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in velit semper, pellentesque tortor vitae, vulputate libero. 
+                Aenean eget dolor eget augue vehicula malesuada a id quam. Etiam sit amet pellentesque odio, non faucibus metus. Vivamus 
+                erat est, cursus et tempor sed, rutrum ultrices ex. Vestibulum iaculis pharetra ipsum nec dictum. Pellentesque dignissim, 
+                ipsum at fermentum consectetur, mauris felis varius enim, in consequat lectus sem nec nisi. Maecenas et nibh cursus, 
+                viverra mi ac, sollicitudin ipsum.
+            </em></p>
+            <p><em>Sed aliquet et orci vitae aliquet. Fusce finibus dapibus aliquam. Nam posuere, mauris ut ornare ornare, eros tellus luctus 
+                metus, quis ultrices diam massa eu odio. Vestibulum consequat metus ac faucibus vestibulum. Quisque placerat ornare nunc, 
+                non tristique ipsum ultricies ac. 
+            </em></p>
+            <p><em>Sincerely yours,</em></p>
+            <p><em>Cammy</em></p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="text">
+            <h1>HAPPY</h1>
+            <h1><em>VALENTINES</em></h1>
+            <h1>DAY!!</h1>
+        </div>
+    </div>
+    <div class="container">
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+        <div class="photo-reel-float-l">
+            <div class="text-photo-reel-l">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+        </div>
+        <div class="photo-reel-float-r">
+            <div class="img-photo-reel">
+                <img src="https://cammydev.sirv.com/cameron.dev/assets/cameron.jpg" alt="">
+            </div>
+            <div class="text-photo-reel-r">
+                <h2>Photo 1</h2>
+                <h4>Photo 1 brief</h4>
+            </div>
+        </div>
+    </div>
+    <div class="ily-container">
+        <h1>I love <em><span class="auto-type"></span></em></h1>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    <script>
+        var typed = new Typed (" .auto-type", {
+            strings: ["your intelligence", "your beauty", "your creativity", "your funniness", "our simularities", "our differnces", "everything about you", "you"],
+            typeSpeed: 150,
+            backSpeed: 150,
+            loop: true
+        })
+
+    </script>
 </body>
 </html>
