--- a/intro.html
+++ b/intro.html
@@ -23,7 +23,7 @@
         </div>
         <div class="btn">
             <a href="/hero">
-                <button class="third-btn">Continue 
+                <button class="main-btn">Continue 
                     <div class="arrow">
                         <img src="assets/smaller arrow.png" alt="">
                     </div>
