--- a/intro.html
+++ b/intro.html
@@ -23,11 +23,7 @@
         </div>
         <div class="btn">
             <a href="/hero">
-                <button class="main-btn">Continue 
-                    <div class="arrow">
-                        <img src="assets/smaller arrow.png" alt="">
-                    </div>
-                </button>
+                <button class="main-btn">Continue </button>
             </a>
         </div>
     </div>
